--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <!-- menu end-->
 
         <!-- main content -->
-        <div class="row mt-5 pt-3">
+        <div class="row mt-5 pt-3 mx-0 px-0 justify-content-center">
 
             <!-- main display -->
             <main class="col">
@@ -80,12 +80,12 @@
             <!-- first header -->
             <div class="row">
                 <div class="shadow col py-5 bg-light">
-                    <div class="row px-3">
-                        <div class="col-sm-7 col-lg-6 mx-lg-4">
-                            <h1 class="text-dark">Header 1</h1>
-                            <p class="text-dark text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi.</p>
+                    <div class="row px-0 mx-0 px-lg-5 mx-lg-5 justify-content-center">
+                        <div class="col-sm-7 col-lg-7 mx-lg-4 mb-4">
+                            <h1 class="h1 text-dark">Header 1</h1>
+                            <p class="h6 sm-h5 text-dark text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi.</p>
                         </div>
-                        <div class="col-sm-5">
+                        <div class="col-sm-5 col-lg-3 text-center p-0 align-self-center">
                             <img id="roadPic" class="img-fluid" src="img/forest-road.jpg" alt="Gruntowa droga w lesie">
                         </div>
                     </div>
@@ -98,12 +98,12 @@
                 <div class="col-10 py-5">
                     <div class="row px-1 mx-1 px-md-5 mx-md-5 my-3 py-3 my-lg-4 py-lg-4 my-xl-5 py-xl-5 justify-content-center text-center">
                         <div class="textCarousel">
-                            <h1 class="text-dark">Header 2</h1>
-                            <h4 class="text-dark text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum ad accusamus nemo magni quos amet, consectetur placeat quod veritatis!</h4>
+                            <h1 class="h1 text-dark">Header 2</h1>
+                            <h4 class="h4 text-dark font-weight-bolder text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa eum ad accusamus nemo magni quos amet, consectetur placeat quod veritatis!</h4>
                         </div>
                         <div class="textCarousel">
-                            <h1 class="text-dark">Header 3</h1>
-                            <h4 class="text-dark text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero officia sunt praesentium perferendis corrupti accusamus, asperiores voluptate maxime voluptas dolore!</h4>
+                            <h1 class="h1 text-dark">Header 3</h1>
+                            <h4 class="h4 text-dark font-weight-bolder text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero officia sunt praesentium perferendis corrupti accusamus, asperiores voluptate maxime voluptas dolore!</h4>
                         </div>
                     </div>    
                 </div>
