--- a/news.html
+++ b/news.html
@@ -45,84 +45,85 @@
         <!-- menu end-->
 
         <!-- main content -->
-        <div class="row my-5"></div>
+        <div class="col my-5 pt-5 mx-0 px-0">
 
             <!-- first news -->
-        <div class="row">
-            <div class="col py-5">
-                <div class="row px-3 justify-content-center">
-                    <div class="col-sm-6 col-md-5 col-lg-4 col-xl-3">
-                        <div class="newsPicCard">
-                            <img class="img-fluid" src="img/newsPic001.jpg" alt="Koparka ładuje zięmię na ciężarówkę">
-                            <h4 class="newsHeader text-light font-weight-bold m-0 px-2 py-1">Header first</h4>
+            <div class="row">
+                <div class="col py-5">
+                    <div class="row px-3 justify-content-center">
+                        <div class="col-sm-6 col-md-5 col-lg-4 col-xl-3">
+                            <div class="newsPicCard">
+                                <img class="img-fluid" src="img/newsPic001.jpg" alt="Koparka ładuje zięmię na ciężarówkę">
+                                <h4 class="h4 newsHeader text-light font-weight-bold m-0 px-2 py-1">Header first</h4>
+                            </div>
+                            <div class="newsStrap mt-3 mb-1"></div>
+                            <p class="h6 newsDate font-weight-bold">02.05.2019</p> 
                         </div>
-                        <div class="newsStrap mt-3 mb-1"></div>
-                        <p class="newsDate">02.05.2019</p> 
-                    </div>
-                    <div class="col-sm-6">
-                        <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, necessitatibus eligendi? Vel saepe distinctio exercitationem.</p>
-                        <p id="news001" class="collapse text-dark text-justify">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat magnam nisi culpa alias ducimus id dignissimos itaque fugiat facere sed!</p>
-                        <button class="buttonText btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news001" aria-expanded="false" aria-controls="news001">Czytaj dalej . . .</button>
+                        <div class="col-sm-6 col-lg-5 mr-lg-4 pr-lg-4">
+                            <p class="h6 text-justify font-weight-bold mr-lg-4 pr-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, necessitatibus eligendi? Vel saepe distinctio exercitationem.</p>
+                            <p id="news001" class="h6 collapse text-dark text-justify font-weight-bold mr-lg-4 pr-lg-4">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat magnam nisi culpa alias ducimus id dignissimos itaque fugiat facere sed!</p>
+                            <button class="buttonText btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news001" aria-expanded="false" aria-controls="news001">Czytaj dalej . . .</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
             <!-- first news end -->
 
             <!-- second news -->
-        <div class="row">
-            <div class="shadow col py-5 bg-light">
-                <div class="row px-3 justify-content-center">
-                    <div class="col-sm-6">
-                            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, sunt quasi fuga fugiat illo dicta!</p>
-                            <p id="news002" class="collapse text-dark text-justify">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa unde ratione maiores eum delectus corrupti vel quis itaque sit quo?</p>
-                            <button class="buttonText btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news002" aria-expanded="false" aria-controls="news002">Czytaj dalej . . .</button>
-                    </div>
-                    <div class="col-sm-6 col-md-5 col-lg-4 col-xl-3 order-first order-sm-last">
-                        <div class="newsPicCard">
-                            <img class="img-fluid" src="img/newsPic002.jpg" alt="Ciężarówka załadowana dużą ilością siana">
-                            <h4 class="newsHeader text-light font-weight-bold m-0 px-2 py-1">Header second</h4>
+            <div class="row">
+                <div class="shadow col py-5 bg-light">
+                    <div class="row px-3 justify-content-center">
+                        <div class="col-sm-6 col-lg-5 justify-content-end ml-lg-4 pl-lg-4">
+                            <p class="h6 text-justify ml-lg-4 pl-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus, sunt quasi fuga fugiat illo dicta!</p>
+                            <p id="news002" class="h6 collapse text-dark text-justify ml-lg-4 pl-lg-4">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa unde ratione maiores eum delectus corrupti vel quis itaque sit quo?</p>
+                            <button class="buttonText btn btn-link font-weight-bold text-dark text-decoration-none collapsed ml-lg-4 pl-lg-4" type="button" data-toggle="collapse" data-target="#news002" aria-expanded="false" aria-controls="news002">Czytaj dalej . . .</button>
                         </div>
-                        <div class="newsStrap mt-3 mb-1"></div>
-                        <p class="newsDate">02.05.2019</p> 
+                        <div class="col-sm-6 col-md-5 col-lg-4 col-xl-3 order-first order-sm-last">
+                            <div class="newsPicCard">
+                                <img class="img-fluid" src="img/newsPic002.jpg" alt="Ciężarówka załadowana dużą ilością siana">
+                                <h4 class="h4 newsHeader text-light font-weight-bold m-0 px-2 py-1">Header second</h4>
+                            </div>
+                            <div class="newsStrap mt-3 mb-1"></div>
+                            <p class="newsDate">02.05.2019</p> 
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
             <!-- second news end-->
 
             <!-- third news -->
-        <div class="row">
-            <div class="col py-5">
-                <div class="row px-3 justify-content-center">
-                    <div class="col-sm-6 col-md-5 col-lg-4 col-xl-3">
-                        <div class="newsPicCard">
-                            <img class="img-fluid" src="img/newsPic003.jpg" alt="Koła ciężarówek">
-                            <h4 class="newsHeader text-light font-weight-bold m-0 px-2 py-1">Header third</h4>
+            <div class="row">
+                <div class="col py-5">
+                    <div class="row px-3 justify-content-center">
+                        <div class="col-sm-6 col-md-5 col-lg-4 col-xl-3">
+                            <div class="newsPicCard">
+                                <img class="img-fluid" src="img/newsPic003.jpg" alt="Koła ciężarówek">
+                                <h4 class="h4 newsHeader text-light font-weight-bold m-0 px-2 py-1">Header third</h4>
+                            </div>
+                            <div class="newsStrap mt-3 mb-1"></div>
+                            <p class="h6 newsDate font-weight-bold">02.05.2019</p> 
                         </div>
-                        <div class="newsStrap mt-3 mb-1"></div>
-                        <p class="newsDate">02.05.2019</p> 
-                    </div>
-                    <div class="col-sm-6">
-                            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates harum dignissimos tempora dolor sit ea!</p>
-                            <p id="news003" class="collapse text-dark text-justify">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eveniet, placeat distinctio saepe quasi tempora quaerat eaque ad laudantium expedita?</p>
+                        <div class="col-sm-6 col-lg-5 mr-lg-4 pr-lg-4">
+                            <p class="h6 text-justify font-weight-bold mr-lg-4 pr-lg-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut, laudantium. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates harum dignissimos tempora dolor sit ea!</p>
+                            <p id="news003" class="h6 collapse text-dark text-justify font-weight-bold mr-lg-4 pr-lg-4">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla eveniet, placeat distinctio saepe quasi tempora quaerat eaque ad laudantium expedita?</p>
                             <button class="buttonText btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#news003" aria-expanded="false" aria-controls="news003">Czytaj dalej . . .</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
             <!-- third news end-->
 
             <!-- nav news menu -->
-        <nav style="display: none">
-            <ul class="pagination justify-content-center">
-                <li class="page-item disabled"><a class="page-link" href="#"><span aria-hidden="true">&laquo;</span></a></li>
-                <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item disabled"><a class="page-link" href="#"><span aria-hidden="true">&raquo;</span></a></li>
-             </ul>
-        </nav>
+            <nav style="display: none">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item disabled"><a class="page-link" href="#"><span aria-hidden="true">&laquo;</span></a></li>
+                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item disabled"><a class="page-link" href="#"><span aria-hidden="true">&raquo;</span></a></li>
+                </ul>
+            </nav>
             <!-- nav news menu end -->
+        </div>   
         <!-- main content end-->
 
         <!-- contact -->
