--- a/career.html
+++ b/career.html
@@ -66,8 +66,8 @@
                 <div class="shadow col py-5 bg-light">
                     <div class="row px-3 pb-5 justify-content-center">
                         <div class="col-12 col-md-10">
-                            <h5>Obecnie poszukujemy kandydatów na kierowców kat. C,D.</h5>
-                            <p id="offer001" class="collapse text-dark text-justify">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa unde ratione maiores eum delectus corrupti vel quis itaque sit quo?</p>
+                            <h5 class="h5">Obecnie poszukujemy kandydatów na kierowców kat. C,D.</h5>
+                            <p id="offer001" class="h6 collapse text-dark text-justify">Quos impedit exercitationem ab molestiae facere placeat soluta quam, corporis eligendi sequi minus, ut vel! Suscipit, architecto delectus qui corrupti itaque voluptas, vitae fugit ea dolorem odit iste magni officia, error asperiores quas eaque eos non deleniti. Corrupti mollitia tempora inventore sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa unde ratione maiores eum delectus corrupti vel quis itaque sit quo?</p>
                             <button class="buttonText btn btn-link font-weight-bold text-dark text-decoration-none collapsed" type="button" data-toggle="collapse" data-target="#offer001" aria-expanded="false" aria-controls="offer001">Czytaj dalej . . .</button>
                         </div>
                     </div>
